panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_error_left_shift_in_if_condition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_error_left_shift_in_if_condition.c
---
success: true
exit_code: 0
----- stdout -----






int should_error;


int okay;


int main() {}

----- stderr -----
