panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_error_missing_rparen_in_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_error_missing_rparen_in_macro_invocation.c
---
success: true
exit_code: 0
----- stdout -----


int main() {
    return 10 + 20;
}
+ 2
----- stderr -----
