panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__preprocessor__test_error_paste_at_beginning_end_of_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_error_paste_at_beginning_end_of_macro.c
---
success: true
exit_code: 0
----- stdout -----




int main() {
    42 ;
    27 ;
    ;
}

----- stderr -----
